updating our details

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         <h1 class='masthead-heading'>Benjamin Benitez</h1>
     </header>
     <section class="details">
-      <h1>Introduction</h1>
-      <p>Details here...</p>
+      <h1>Introduction</h1> 
+      <p>I'm a store manager for O'Reilly auto parts. I have been with the company 4 years, been in the auto parts industry for 9 years  </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Long Island NY</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Playing video games and watching movies/TV shows</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Working for twitch.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Richmond VA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To get out of the retail/auto parts</p>
     </section>
 
     <footer id="footer">
